--- a/mojaTeretana/src/main/resources/static/css/registracija.css
+++ b/mojaTeretana/src/main/resources/static/css/registracija.css
@@ -1,5 +1,5 @@
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email], input[type=number], input[type=date] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
