--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/registracija.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/registracija.html
@@ -14,7 +14,7 @@
 <body>
 <img src="/img/background.jpg">
 <div class="center">
-    <form action="register-registracija" method="post">
+    <form action="korisnici/registracija" method="post">
         <label><b class="a">Korisnicko ime: </b></label>
         <input type="text" placeholder="Unesite korisnicko ime" name="korisnickoIme" required>
 
