--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/greska.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/greska.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" type="text/css" href="css/Stilovi.css"/>
+	<link rel="stylesheet" type="text/css" href="css/Meni.css"/>
+	<base href="http://localhost:8080/admin/sale/deleteSala.html">
+	<title>Registracija</title>
 </head>
 <body>
+	<br/>
+	 	<ul>    
+ 		<li><a href="index.html">Povratak</a></li>    
+ 	</ul>  
+ 	<h1>Korisnik je blokiran</h1>  
 
 </body>
 </html>
