--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/index.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="" defer></script>
     <link rel="stylesheet" href="/css/home.css">
-    <title>Pocetna</title>
+    <title>Pocetna stranica</title>
 </head>
 <body>
 <img src="/img/background.jpg">
   <div class="center">
-    <a href="/login"><button class="btn prijava">PRIJAVA</button></a>
-    <a href="/register"><button class="btn prijava">REGISTRACIJA</button></a>
+    <a href="login.html"><button class="btn prijava">PRIJAVA</button></a>
+    <a href="registracija.html"><button class="btn prijava">REGISTRACIJA</button></a>
   </div>
 </body>
-</html>
+</html>			
