--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/clanskaKarta.html
@@ -4,10 +4,13 @@
 		<meta charset="UTF-8">
 		<base th:href="@{/}">
 		<title>Clanska Karta</title>
-		<link rel="stylesheet" type="text/css" href="css/Tabela.css"/>
-		<link rel="stylesheet" type="text/css" href="css/Meni.css"/>
+		<link rel="stylesheet"  type="text/css"  href="css/home.css"/>  
+		<link rel="stylesheet" type="text/css" href="css/StiloviTabela.css"/>
+		<link rel="stylesheet" type="text/css" href="css/StiloviHorizontalniMeni.css"/>
 	</head>
 	<body>
+	 <a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
 		<ul>
 	 <li><a href="korisnik/profil" th:text="#{profil}"></a></li>  
 	 <li><a href="korisnik/korpa" th:text="#{korpa}"></a></li>  
