--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/sala.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/sala.html
@@ -3,18 +3,21 @@
 <head>
 	<meta charset="UTF-8" />
 
-	<link rel="stylesheet"  type="text/css"  href="css/Tabela.css"/>     
-	<link rel="stylesheet" type="text/css" href="css/Stilovi.css"/>
-	<link rel="stylesheet" type="text/css" href="css/Meni.css"/>
+	<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	<link rel="stylesheet" type="text/css" href="css/StiloviForma.css"/>
+	<link rel="stylesheet" type="text/css" href="css/StiloviHorizontalniMeni.css"/>
+	<link rel="stylesheet"  type="text/css"  href="css/home.css"/>  
 	<base href="bURL">
 	<title>Dodavanje sale</title>
 </head>
 <body>
-
+	
+	<a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+	
 	 		<table>     
 	 			<h1 th:text="#{sale}"></h1>    
 	 			<tr>      
-	 			    <th th:text="#{oznakaSale}"></th> 
 	 				<th th:text="#{kapacitet}"></th>  
 	 				<th th:text="#{izmenaKapaciteta}"></th> 
 	 				<th th:text="#{obrisiSalu}"></th> 
