--- a/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviForma.css
+++ b/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviForma.css
@@ -7,6 +7,7 @@ caption {
 	font-size: 16pt
 }
 
+
 th, td {
 	border: 1px solid Gray;
 	padding: 5px;
@@ -16,7 +17,7 @@ th {
 	text-align: right;
 	width: 150px;
 	color: white;
-	background-color: pink;
+	background-color: grey;
 }
 
 td {
@@ -31,4 +32,20 @@ input, textarea, select {
 
 input[type="checkbox"], input[type="radio"] {
 	width: 20px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*transform: translate(-50%, -200%);;*/
 }
