--- a/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviHorizontalniMeni.css
+++ b/mojaTeretana/mojaTeretana/src/main/resources/static/css/StiloviHorizontalniMeni.css
@@ -13,5 +13,12 @@ table.horizontalni-meni li {
 	background-color: White;
 }
 table.horizontalni-meni td {
-	background-color: pink;
+	background-color: DodgerBlue;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
 }
