--- a/mojaTeretana/mojaTeretana/src/main/resources/static/css/prijava.css
+++ b/mojaTeretana/mojaTeretana/src/main/resources/static/css/prijava.css
@@ -1,21 +1,35 @@
-input[type=text].l, input[type=password].l {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
-button {
-    background-color:lightslategray;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+.btn {
     border: none;
+    padding: 14px 28px;
+    font-size: 16px;
     cursor: pointer;
-    width: 100%;
+    display: inline-block;
+    color: black;
 }
-
-.a {
+.btn:hover {
+    background: #e7e7e7;
+}
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*transform: translate(-50%, -200%);;*/
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
+.boja {
     color: white;
 }
