--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTerminTreninga.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/dodajTerminTreninga.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="UTF-8" />
 
-	<link rel="stylesheet"  type="text/css"  href="css/Tabela.css"/>     
-	<link rel="stylesheet" type="text/css" href="css/Stilovi.css"/>
-	<link rel="stylesheet" type="text/css" href="css/Meni.css"/>
+	<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	<link rel="stylesheet" type="text/css" href="css/StiloviForma.css"/>
+	<link rel="stylesheet" type="text/css" href="css/home.css"/>
 	<base href="bURL">
-	<title>Dodaj termin</title>
+	<title>Dodaj termin treninga</title>
 </head>
 <div>
+<a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+
+
 <form method="post" action="addTerminTreninga">
 			<table class="forma">
 			
