--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/korisnici.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/korisnici.html
@@ -4,10 +4,15 @@
 		<meta charset="UTF-8">     
 		<base th:href="@{/}"><!-- popuni href atribut vrednosšću context path-a -->
 		<title>Korisnici</title>     
-		<link rel="stylesheet"  type="text/css"  href="css/Tabela.css"/>     
-	 	<link rel="stylesheet"  type="text/css" href="css/Meni.css"/>   
+		<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	 	<link rel="stylesheet"  type="text/css" href="css/StiloviHorizontalniMeni.css"/> 
+	 	<link rel="stylesheet"  type="text/css"  href="css/home.css"/>   
 	 </head>     
-	 <body>   
+	 <body> 
+	 
+	 <a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+	   
 	 <li><a href="admin/profil" th:text="#{profil}"></a></li>
 	   <li><a href="admin/sale" th:text="#{sale}"></a></li> 
 	   <li><a href="admin/komentari" th:text="#{komentari}"></a></li>
@@ -24,7 +29,7 @@
 	 				<th th:text="#{lozinka}"></th> 
 	 				<th th:text="#{datumRodjenja}"></th> 
 	 				<th th:text="#{brojTelefona}"></th> 
-	 				<th th:text="#{datumiVreme}"></th> 
+	 				<th th:text="#{datumIVremeRegistracije}"></th> 
 	 				<th th:text="#{tipKorisnika}"></th> 
 	 				<th th:text="#{adresa}"></th> 
 	 				 
