--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/korpe.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/korpe.html
@@ -4,10 +4,18 @@
 		<meta charset="UTF-8">
 		<base th:href="@{/}">
 		<title>Korpe</title>
-		<link rel="stylesheet" type="text/css" href="css/Tabela.css"/>
-		<link rel="stylesheet" type="text/css" href="css/Meni.css"/>
+		<link rel="stylesheet" type="text/css" href="css/StiloviTabela.css"/>
+		<link rel="stylesheet" type="text/css" href="css/StiloviHorizontalniMeni.css"/>
+		<link rel="stylesheet"  type="text/css"  href="css/home.css"/>  
+		
 	</head>
 	<body>
+	
+	<a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+	<img src="/img/korpa.jpg">
+	
+	
 		<ul>
 			 	 <li><a href="korisnik/profil" th:text="#{profil}"></a></li>  
 	             <li><a href="korisnik/korpa" th:text="#{korpa}"></a></li>  
