--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/polaznikProfil.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/polaznikProfil.html
@@ -4,10 +4,15 @@
 		<meta charset="UTF-8">     
 		<base th:href="@{/}"><!-- popuni href atribut vrednosšću context path-a -->
 		<title>Polaznik Profil</title>     
-		<link rel="stylesheet"  type="text/css"  href="css/Tabela.css"/>     
-	 	<link rel="stylesheet"  type="text/css" href="css/Meni.css"/>   
+		<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	 	<link rel="stylesheet"  type="text/css" href="css/StiloviHorizontalniMeni.css"/> 
+	 	<link rel="stylesheet"  type="text/css"  href="css/home.css"/>    
 	 </head>     
-	 <body>   
+	 <body>  
+	 
+	 <a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+	  
   
    	<ul>    
 	     <li><a href="korisnik/korpa" th:text="#{korpa}"></a></li>  
