--- a/mojaTeretana/mojaTeretana/src/main/resources/templates/trening.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/templates/trening.html
@@ -4,10 +4,18 @@
 		<meta charset="UTF-8">     
 		<base th:href="@{/}"><!-- popuni href atribut vrednosšću context path-a -->
 		<title>Trening</title>     
-		<link rel="stylesheet"  type="text/css"  href="css/Tabela.css"/>     
-	 	<link rel="stylesheet"  type="text/css" href="css/Meni.css"/>   
+		<link rel="stylesheet"  type="text/css"  href="css/StiloviTabela.css"/>     
+	 	<link rel="stylesheet"  type="text/css" href="css/StilovHorizontalniMeni.css"/>
+	 	<link rel="stylesheet"  type="text/css"  href="css/treninzi.css"/>  
+	 	<link rel="stylesheet"  type="text/css"  href="css/home.css"/> 
+	 	  
 	 </head> 
 <body>
+
+<a href="index.html"><button class="btn povratak">Back</button></a>
+	<img src="/img/background.jpg">
+
+
 		 <li><a href="korisnik/profil" th:text="#{profil}"></a></li>  
 	     <li><a href="korisnik/korpa" th:text="#{korpa}"></a></li>  
 	     <li><a href="korisnik/clanskaKarta" th:text="#{clanskaKarta}"></a></li> 
